# rsb_ws_bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SimpleConverter.cxx  SimpleConverter.h  generateProto.sh  main.cxx  twists.tide
www/: example2.proto  index.html  index2.html  number.proto
www/rst/kinematics/: AngularVelocities.proto  LinearVelocities.proto  Twist.proto
